k8s/itoapi-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: teampi
spec:
  ports:
  - name: default
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: teampi
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
